<resources>
    <string name="app_name">Trivia Nest</string>

    <string name="one_vs_one">1 vs 1</string>
    <string name="multi_player">Multi Player</string>

    <string name="nav_header_title">Polify</string>
    <string name="nav_header_subtitle">andruid.magic@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="send_sms">Send SMS</string>
    <string name="phone_input">Enter number</string>
    <string name="error_invalid_number">Invalid number format</string>
    <string name="verify">Verify</string>
    <string name="practice_battle">Practice battle</string>

    <string name="title_1v1">1 vs 1</string>
    <string name="desc_1v1">Play with random players online and get a chance to win more.</string>
    <string name="coins_1v1">50 Coins</string>
    <string name="title_multiplayer">Multiplayer</string>
    <string name="desc_multiplayer">Challenge Your Friends and beat \'em all</string>
    <string name="coins_multiplayer">20 coins</string>
    <string name="title_test">How to play?</string>
    <string name="desc_test">Test the interface by giving answers to some fixed questions</string>
    <string name="coins_test">FREE</string>

    <string name="first">Made with</string>
    <string name="second">in India</string>
    <string name="message_win">YOU WIN %1$s coins!!!</string>
    <string name="message_lose">YOU LOSE %1$s coins!!!</string>
    <string name="message_tie">Scores level</string>


    <string name="score">Score %1$s</string>
    <string name="challenge"><u>Challenge Friends</u></string>
    <string name="title_multiplayer_invite">Multiplayer Invite</string>
    <string name="desc_multiplayer_invite">%1$s is inviting you to join multiplayer game</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_leave_room">Leave room</string>
    <string name="desc_leave_room">Are you sure you want to leave this room?</string>
    <string name="title_leave_battle">Leave battle</string>
    <string name="desc_leave_battle">Are you sure you want to leave battle? All your points will be lost.</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="avatar_updated">Avatar Updated</string>
    <string name="contacts_sync_start">Contacts Sync Started</string>
    <string name="logout_success">Successfully Logged Out</string>
    <string name="decline_invite">Invite Declined</string>
    <string name="enter_valid_code">Please enter the valid code</string>
    <string name="room_leave_success">Room left successfully</string>
    <string name="sent_invite">Invite sent</string>
    <string name="title_logout">Log out</string>
    <string name="desc_logout">Are you sure you want to log out?</string>
    <string name="score_wait_msg">Loading results… It may take up to 30 seconds based on the opponent\'s activity</string>
    <string name="multiplayer_request">*You will receive multiplayer mode requests from your friends on this screen</string>
    <string name="room_request">*Go back to home screen for accepting your friend request or else send request from here</string>
    <string name="questions_wait_msg">Your network might be slow Fetching questions....</string>
    <string name="error_invalid_user_name">Invalid user name</string>

    <string name="contacts_perm_title">Grant contacts permission</string>
    <string name="contacts_perm_msg">Trivia Nest requires to read your contacts so that you can play multiplayer with your friends. Please grant the contacts permission from settings</string>
</resources>