<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="battle"
            type="com.droidx.trivianest.model.BattleSelect" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:src="@{battle.image}"
                    tools:src="@drawable/b"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image"
                    android:text="@{battle.title}"
                    tools:text="@string/title_1v1"
                    android:layout_marginTop="23dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="16dp"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_horizontal"
                    android:maxLines="3"
                    android:text="@{battle.desc}"
                    tools:text="@string/desc_1v1"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="19sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:text="@{battle.coins}"
                    tools:text="@string/coins_1v1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="16dp"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    app:backgroundTint="#f23b5f" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>