<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.droidx.trivianest.model.data.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.HomeActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="never" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/appCompatTextView"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/viewPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:cardBackgroundColor="#000000"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewPager"
                app:layout_constraintEnd_toStartOf="@+id/viewPager"
                app:layout_constraintStart_toEndOf="@+id/viewPager"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.18">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_profile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/cardview_dark_background"
                        android:scaleType="centerCrop"
                        tools:src="@mipmap/ic_profile"
                        app:imageUrl="@{user.avatar}"
                        tools:ignore="PrivateResource" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/img_profile"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="start"
                        android:maxLength="7"
                        android:text="@{user.userName}"
                        android:textAlignment="textStart"
                        android:textColor="#ffffff"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="Darren Mistry" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/Level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="40dp"
                        android:layout_toEndOf="@+id/img_profile"
                        android:fontFamily="sans-serif-thin"
                        android:text="@{user.level}"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        tools:text="Newbie" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_dollar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginRight="50dp"
                        android:src="@drawable/coinsrd" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_plus"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/plus" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_coins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginRight="50dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@{String.valueOf(user.coins)}"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        tools:text="1000" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/first"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:text="@string/multiplayer_request"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager"
            app:layout_constraintVertical_bias="0.884" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/second"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.740"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_flag"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/flag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.71"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager"
            app:layout_constraintVertical_bias="0.88" />

        <FrameLayout
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:animateLayoutChanges="true"
            android:background="#000000"
            android:visibility="gone"
            tools:visibility="visible">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loadingAnimView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#66000000"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>